--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ nav ul {
     padding: 0;
 }
 
+.mobile-menu {
+  display: none;
+}
+
 /* Menu links */
 nav ul li a {
     position: relative;
@@ -164,12 +168,38 @@ button:hover{
 }
 
 .aboutme{
+    width: 100%;
     padding: 20px;
 }
 
+
+.aboutdeatail{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    text-align: justify;
+    
+}
+
+.educationline{
+    border-bottom: 1px solid black;
+}
+
+.aboutleft{
+     flex: 1;
+     
+     padding: 20px;
+}
+.aboutright{
+    flex: 1;
+    border-left: 1px solid black;
+    padding: 20px;
+}
 .SectionInside{
     border: 1px solid black;
     padding: 20px;
+   
 }
 
 .titleborder{
@@ -177,12 +207,30 @@ button:hover{
     padding: 10px;
 }
 
+
+.skill_deatails{
+    width: 600px;
+    height: 30px;
+    position: relative;
+    
+}
+
+
 .skill{
-    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 4px 8px;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 5px rgba(0,123,255,0.5);
+    border-radius: 3px;
 }
 
 .skillicon{
     width: 100px;
+    height: 90px;
 }
 
 .skillCard{
@@ -192,28 +240,72 @@ button:hover{
     transition: 500ms ease-in-out;   
 }
 
-.skillCard h3{
-    font-size: 28px;
-   
+
+.progress {
+  background-color: white;
+  border-radius: 20px;
+  overflow: hidden;
+  height: 25px;
+}
+
+.progress-bar {
+  background-color: #FFC857;
+  height: 100%;
+  text-align: right;
+  padding-right: 10px;
+  line-height: 25px;
+  color: #fff;
+  font-weight: bold;
+  transition: width 1s ease-in-out;
+}
+
+#skillimg{
+    width: 500px;
+    mix-blend-mode: multiply;
 }
 
 
-.skillCard:hover{
-    background-color:white;
-    transform: scale(1.03);
-    
-}
 
 
-.skillTitle{
-    border-bottom: 1px solid black;
-    padding-bottom: 10px;
+.skill_name{
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
-.skills{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    text-align: center;
-    gap: 20px;
+
+.skill_bar{
+    position: absolute;
+    top: 130%;
+    background-color: blue;
+    padding: 0px 8px;
+    height: 2px;
+    left: 0%;
+}
+
+.skill_html{
+     width: 90%;
+}
+
+.skill_css{
+     width: 85%;
+}
+
+.skill_js{
+     width: 80%;
+}
+
+.skill_react{
+     width: 30%;
+}
+
+.skill_sql{
+     width: 60%;
+}
+
+.Skillinside{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .formSection{
@@ -227,10 +319,12 @@ button:hover{
     align-items: center;
     justify-content: space-between;
 }
-
+.formdeatails{
+    flex: 1fr;
+}
 .frominside{
     padding: 40px;
-    width: 500px;
+    flex: 1fr;
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
@@ -266,4 +360,154 @@ textarea:focus {
 ::placeholder {
     color: #aaa;
     font-style: italic;
+}
+
+
+
+
+.project{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+}
+
+.projectCard{
+    border: 1px solid black;
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px; 
+    border-radius: 10px;
+}
+
+.projectCard img{
+    width: 100%;
+    border-radius: 10px 10px 0px 0px;
+    
+}
+
+.projectCardContent{
+    padding: 20px;
+}
+
+#seeprojectbtn{
+    width: 100%;
+    background-color: black;
+    margin-top: 20px;
+    color: white;
+    
+}
+
+.skill_conatainer{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+
+footer{
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: gray;
+}
+
+.social_icon{
+    font-size: 30px;
+    
+}
+
+.fa-brands{
+    color: gray;
+}
+
+.fa-brands:hover{
+    transform: scale(1.1);
+    color: black;
+    transition: 500ms;
+}
+
+
+/* For mobile */
+@media (max-width: 768px) {
+  .aboutdeatail {
+    flex-direction: column; /* stack them vertically */
+    align-items: center;
+  }
+
+  .bannerInside{
+    flex-direction: column-reverse;
+  }
+  .bannerLeft{
+    margin-right: 50px;
+}
+  .bannerImage{
+    border-radius:50%;
+    width: 300px;
+    height: 300px;
+}
+
+
+.project{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 20px;
+}
+
+.mainform{
+    flex-direction: column;
+}
+.frominside{
+    width: 100%;
+}
+.Skillinside{
+    flex-direction: column-reverse;
+}
+.skill_deatails{
+    width: 300px;
+
+}
+
+#skillimg{
+    width: 100%;
+}
+
+.bannerLeft{
+    margin-right: 0px;
+}
+
+   .bannerRight{
+    border-left: hidden;
+}
+.bannerImage{
+ 
+    border-radius:50%;
+    width: 300px;
+    height: 300px;
+}
+
+   .bannerImage{
+    margin-left: 0px;
+    }
+
+
+
+     .menu {
+    display: none; /* hide desktop links */
+  }
+
+  .mobile-menu {
+    display: flex;
+    align-items: center;
+  }
+
+  .menu-icon {
+    font-size: 22px;
+    margin-right: 8px;
+  }
+
+  select {
+    padding: 5px;
+    font-size: 16px;
+  }
+
 }
